# FIXME: Modules disabled because they were written for the C API of OpenCV 2.0
# (Ubuntu 14.04, 16.04), which was maintained for backwards compatibility on
# OpenCV 3.0 (Ubuntu 18.04), but has been finally dropped on OpenCV 4.0 (20.04).
#add_subdirectory(facedetector)
#add_subdirectory(faceoverlay)
#add_subdirectory(imageoverlay)
#add_subdirectory(logooverlay)
#add_subdirectory(movementdetector)
add_subdirectory(opencvfilter)
